--- a/videos.html
+++ b/videos.html
@@ -161,10 +161,10 @@
                             Follow us on
                         </p>
                         <ul class="list-images">
-                            <li class="twitter"><a href="#"></a></li>
-                            <li class="instagram"><a href=""></a></li>
-                            <li class="youtube"><a href=""></a></li>
-                            <li class="facebook"><a href=""></a></li>
+                            <li class="twitter"><a href="#"><img src="img/icons/twitter.svg" /></a></li>
+                            <li class="instagram"><a href=""><img src="img/icons/instagram.svg" /></a></li>
+                            <li class="youtube"><a href=""><img src="img/icons/youtube.svg" /></a></li>
+                            <li class="facebook"><a href=""><img src="img/icons/facebook.svg" /></a></li>
                         </ul>
                     </div>
                 </div>
