modified some properties

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
     <header class="header-principal">
         <div class="container">
             <a href="index.html">
-                <img src="img/logos/logo.png" class="header-logo" alt="Logo cooking">
+                <img src="img/logos/logo.png" class="header-logo" width="150"
+                height="auto" alt="Logo cooking">
+                
             </a>
             <nav>
                 <ul>
@@ -97,7 +99,7 @@
                 <p>
                     Check out our shop, where we share our go-to and recommend appliances, ingredients, tools, and more!
                 </p>
-                <a href="#">
+                <a href="shop.html">
                     Shop our recomendations
                 </a>
             </div>
