--- a/recipes.html
+++ b/recipes.html
@@ -14,7 +14,8 @@
     <header class="header-principal">
         <div class="container">
             <a href="index.html">
-                <img src="img/logos/logo.png" class="header-logo" alt="Logo cooking">
+                <img src="img/logos/logo.png" class="header-logo" width="150"
+                height="auto" alt="Logo cooking">
             </a>
             <nav>
                 <ul>
