--- a/videos.html
+++ b/videos.html
@@ -11,11 +11,12 @@
 
 </head>
 
-<body>
+<body id="videos">
     <header class="header-principal">
         <div class="container">
             <a href="index.html">
-                <img src="img/logos/logo.png" class="header-logo" alt="Logo cooking">
+                <img src="img/logos/logo.png" class="header-logo" width="150"
+                height="auto" alt="Logo cooking">
             </a>
             <nav>
                 <ul>
