--- a/videos.html
+++ b/videos.html
@@ -145,10 +145,10 @@
                 <p>
                     Receive a weekly email with new recipes and recommendations for your cooking
                 </p>
-                <div class="newsletter">
-                    <input type="email" placeholder="Your email address" name="email" id="email">
+                <form class="newsletter">
+                    <input type="text" name="email" id="email" required placeholder="Your email address" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$">
                     <button type="submit">Suscribe</button>
-                </div>
+                </form>
             </div>
         </div>
         <div class="social-media">
