ordered some attributes

--- a/index.html
+++ b/index.html
@@ -2,12 +2,11 @@
 <html lang="en-US">
 
 <head>
-    <meta charset='utf-8'>
-    <title>Index Page</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='styles.css'>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Index | COOKINATION</title>   
+    <meta name="description" content="You have entered in amazing world of cookination! Thanks to it you will improve fast your cooking habilities!">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body id="index">
@@ -43,7 +42,6 @@
         </div>
     </div>
     </section>
-   
     <div class="home-container">
     <section class="articles-grid">
             <div class="container-articles-grid">
@@ -119,12 +117,13 @@
                 gluten-free or paleo it can be hard to find a delicious recipe that gets you excited and tastes as good
                 as the traditional version. Well, I think this recipe is gonna get you excited.
             </p>
-            <p><button type="submit">View recipe</button></p>
+            <p>            
+                <a class="link-button-appearance" href="https://www.freecodecamp.org/">View recipe</a>  
+            </p>
         </div>
             <img src="img/pick-week.jpg" alt="Logo cooking" class="article-image">
         </article>
-    </div>
-        
+    </div>   
     <footer>
         <div class="social-container">
             <div class="text-container">
@@ -151,7 +150,7 @@
                             Follow us on
                         </p>
                         <ul class="list-images">
-                            <li class="twitter"><a href="#"><img src="img/icons/twitter.svg" /></a></li>
+                            <li class="twitter"><a href=""><img src="img/icons/twitter.svg" /></a></li>
                             <li class="instagram"><a href=""><img src="img/icons/instagram.svg" /></a></li>
                             <li class="youtube"><a href=""><img src="img/icons/youtube.svg" /></a></li>
                             <li class="facebook"><a href=""><img src="img/icons/facebook.svg" /></a></li>
