--- a/recipes.html
+++ b/recipes.html
@@ -2,12 +2,11 @@
 <html lang="en-US">
 
 <head>
-    <meta charset='utf-8'>
-    <title>Recipes Page</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='styles.css'>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Recipes | COOKINATION</title>   
+    <meta name="description" content="You dont know what to cook? Let me show you the best recipes!">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body id="receipes">
@@ -271,7 +270,7 @@
                             Follow us on
                         </p>
                         <ul class="list-images">
-                            <li class="twitter"><a href="#"><img src="img/icons/twitter.svg" /></a></li>
+                            <li class="twitter"><a href=""><img src="img/icons/twitter.svg" /></a></li>
                             <li class="instagram"><a href=""><img src="img/icons/instagram.svg" /></a></li>
                             <li class="youtube"><a href=""><img src="img/icons/youtube.svg" /></a></li>
                             <li class="facebook"><a href=""><img src="img/icons/facebook.svg" /></a></li>
