--- a/videos.html
+++ b/videos.html
@@ -2,12 +2,12 @@
 <html lang="en-US">
 
 <head>
-    <meta charset='utf-8'>
-    <title>Videos Page</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='styles.css'>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Videos | COOKINATION</title>   
+    <meta name="description" content="Watch all the recipes videos and you will see all the details">
+    <link rel="stylesheet" href="css/styles.css">
+    
 
 </head>
 
@@ -162,7 +162,7 @@
                             Follow us on
                         </p>
                         <ul class="list-images">
-                            <li class="twitter"><a href="#"><img src="img/icons/twitter.svg" /></a></li>
+                            <li class="twitter"><a href=""><img src="img/icons/twitter.svg" /></a></li>
                             <li class="instagram"><a href=""><img src="img/icons/instagram.svg" /></a></li>
                             <li class="youtube"><a href=""><img src="img/icons/youtube.svg" /></a></li>
                             <li class="facebook"><a href=""><img src="img/icons/facebook.svg" /></a></li>
